examples/datalog/31_strings/09_string_substring.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_substr
Knowledge graph 'test_substr' created.
Switched to knowledge graph: test_substr
> .kg use test_substr
Switched to knowledge graph: test_substr
> +words[("hello world",)].
Inserted 1 fact(s) into 'words'.
> substr_result(S, R) :- words(S), R = SUBSTR(S, 0, 5).
Script error: Parse error: Invalid term: 'SUBSTR(S, 0, 5)'
