examples/datalog/31_strings/09_string_substring.dl
% Test: Substring function
% Expected: Extract substring
% Category: 31_strings
% Priority: P2 - String functions

.kg create test_substr
.kg use test_substr

+words[("hello world",)].

% Extract "hello" (first 5 chars)
substr_result(S, R) :- words(S), R = SUBSTR(S, 0, 5).

?- substr_result(S, R).

.kg use default
.kg drop test_substr
